Correct some styles in mobile and desktop modes to better align with designs set forth

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
   background-color: var(--cream);
   font-family: "Montserrat", sans-serif;
   height: 100vh;
-  text-wrap: balance;
 }
 
 .card {
@@ -50,15 +49,15 @@ picture {
 }
 
 .card-desc {
-  padding: 26px 24px 24px;
+  padding: 30px 24px 24px;
   background-color: var(--white);
 }
 
-span:first-of-type {
+.product {
+  letter-spacing: 5px;
   color: var(--dark-grayish-blue);
   text-transform: uppercase;
-  letter-spacing: 0.25rem;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   font-weight: 500;
 }
 
@@ -66,25 +65,27 @@ h1,
 span.sale-price {
   font-family: "Fraunces", serif;
   font-weight: 700;
-  font-size: 34px;
+  font-size: 2rem;
 }
 
 h1 {
   color: var(--very-dark-blue);
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  line-height: 2rem;
 }
 
 p {
   color: var(--dark-grayish-blue);
   line-height: 1.5rem;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 500;
 }
 
 .prices {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin: 15px auto;
+  display: flex;
+  align-items: center;
 }
 
 span.sale-price {
@@ -101,10 +102,11 @@ span.sale-price {
 
 button {
   width: 100%;
-  margin: 24px 0;
+  margin: 24px auto 0;
   padding: 16px 90px;
   color: var(--white);
   background-color: var(--dark-cyan);
+  font-weight: 700;
   text-align: center;
   display: flex;
   white-space: nowrap;
@@ -135,7 +137,13 @@ button:active {
   color: hsl(228, 45%, 44%);
 }
 
-@media screen and (min-width: 601px) {
+/* Desktop styles: */
+
+@media screen and (min-width: 768px) {
+  body {
+    text-wrap: balance;
+  }
+
   .card {
     flex-direction: row;
     justify-content: center;
@@ -147,14 +155,15 @@ button:active {
   .card-desc {
     box-sizing: border-box;
     flex-basis: 50%;
-  }
-
-  .card-image {
     height: 100%;
-    flex-basis: 50%;
   }
 
   .card-image img {
     height: 100%;
+  }
+
+  h1 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 }
